--- a/composer.json
+++ b/composer.json
@@ -1,44 +1,43 @@
 {
-    "name": "manuelgil/ci4-mustache",
-    "description": "Example of template engine integration in CodeIgniter 4",
-    "version": "1.0.0",
-    "license": "MIT",
-    "type": "project",
-    "keywords": [
-        "codeigniter4"
-    ],
-    "authors": [
-        {
-            "name": "ManuelGil",
-            "email": "atencion.ms@outlook.com",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "php": "^7.4 || ^8.0",
-        "codeigniter4/framework": "^4.2",
-        "codeigniter4/translations": "^4.2",
-        "mustache/mustache": "^2.14"
-    },
-    "require-dev": {
-        "fakerphp/faker": "^1.9",
-        "mikey179/vfsstream": "^1.6",
-        "phpunit/phpunit": "^9.1"
-    },
-    "suggest": {
-        "ext-fileinfo": "Improves mime type detection for files"
-    },
-    "autoload": {
-        "exclude-from-classmap": [
-            "**/Database/Migrations/**"
-        ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\Support\\": "tests/_support"
-        }
-    },
-    "scripts": {
-        "test": "phpunit"
+  "name": "manuelgil/ci4-mustache",
+  "description": "Boilerplate with CodeIgniter 4 and Mustache Template Engine.",
+  "license": "MIT",
+  "type": "project",
+  "keywords": [
+    "codeigniter4"
+  ],
+  "authors": [
+    {
+      "name": "ManuelGil",
+      "email": "atencion.ms@outlook.com",
+      "role": "Developer"
     }
+  ],
+  "require": {
+    "php": "^7.4 || ^8.0",
+    "codeigniter4/framework": "^4.2",
+    "codeigniter4/translations": "^4.2",
+    "mustache/mustache": "^2.14"
+  },
+  "require-dev": {
+    "fakerphp/faker": "^1.9",
+    "mikey179/vfsstream": "^1.6",
+    "phpunit/phpunit": "^9.1"
+  },
+  "suggest": {
+    "ext-fileinfo": "Improves mime type detection for files"
+  },
+  "autoload": {
+    "exclude-from-classmap": [
+      "**/Database/Migrations/**"
+    ]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\Support\\": "tests/_support"
+    }
+  },
+  "scripts": {
+    "test": "phpunit"
+  }
 }
