--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,24 @@
 {
     "name": "manuelgil/ci4-mustache",
-    "description": "Boilerplate with CodeIgniter 4 and Mustache Template Engine.",
+    "description": "🔥 Boilerplate: Mustache template engine for CodeIgniter 4 framework",
     "license": "MIT",
     "type": "project",
     "keywords": [
+        "mustache template engine",
+        "mustache-template-engine",
+        "mustache",
+        "ci-4",
+        "ci",
+        "ci4",
+        "codeigniter 4",
+        "codeigniter-4",
+        "codeigniter",
         "codeigniter4",
-        "mustache template engine"
+        "framework",
+        "mvc",
+        "php",
+        "template engine",
+        "template"
     ],
     "authors": [
         {
